--- a/server/views/pages/btts.ejs
+++ b/server/views/pages/btts.ejs
@@ -23,7 +23,7 @@
           <% bttsDays.forEach(({key, label}) => { %>
             <li class="nav-item" role="presentation">
               <button
-                class="nav-link <%= key === 'leo' ? 'active' : '' %>"
+                class="nav-link text-dark <%= key === 'leo' ? 'active' : '' %>"
                 id="tab-btts-<%= key %>-tab"
                 data-bs-toggle="pill"
                 data-bs-target="#tab-btts-<%= key %>"
