--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -33,6 +33,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/main.css" />
+    <% const extra = typeof extraStyles !== 'undefined' ? (Array.isArray(extraStyles) ? extraStyles : [extraStyles]) : []; %>
+    <% extra.forEach((href) => { %>
+      <link rel="stylesheet" href="<%= href %>" />
+    <% }) %>
   </head>
   <body class="bg-surface">
     <div class="app-shell d-flex">
@@ -43,6 +47,7 @@
           <%- body %>
         </main>
         <%- include('../partials/footer') %>
+        <%- include('../partials/modals/betwinner') %>
       </div>
     </div>
 
@@ -50,7 +55,7 @@
     <script src="/js/sidebar.js"></script>
     <script>
       window.OpenAff = function (slug) {
-        const url = `http://bet-link.top/${slug}/register`;
+        const url = `https://bet-link.top/${slug}/register`;
         window.open(url, '_blank');
       };
     </script>
